feat(team): add team create endpoint
